fix minor layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,6 @@ h3 {
 header {
     max-width: calc(1110px + 2rem);
     margin: auto;
-    position: relative;
 }
 
 header .container {
@@ -195,10 +194,9 @@ header .container {
     flex-direction: column;
     background-color: #FFF;
     position: absolute;
-    top: 82px ;
-    right: 8px;
-    width: max(280px, 96%);
-    max-width: 360px;
+    top: 58px;
+    right: -16px;
+    width: min(360px, 96vw);
     z-index: 1;
     border-radius: 8px;
     box-shadow: 0 15px 30px 5px rgba(144, 144, 144, 0.379);
@@ -411,7 +409,7 @@ header .container {
     color: var(--clr-gray-blue);
 }
 
-.cart-wrapper {
+.add-to-cart-wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1rem;
@@ -457,7 +455,7 @@ header .container {
     }
 
     .cart {
-        top: 100px;
+        top: 58px;
     }
 
     .profile-image {
@@ -506,7 +504,7 @@ header .container {
         gap: 1rem;
     }
 
-    .cart-wrapper {
+    .add-to-cart-wrapper {
         grid-template-columns: minmax(160px, 1fr) 2fr;
         margin-bottom: 0;
     }
